fix(form-control): removed extra space under textarea

--- a/src/patternfly/components/FormControl/form-control.scss
+++ b/src/patternfly/components/FormControl/form-control.scss
@@ -376,6 +376,7 @@ $pf-c-form-control--m-clock--Coordinates: "M256 8C119 8 8 119 8 256s111 248 248 
 
     width: var(--pf-c-form-control--textarea--Width);
     height: var(--pf-c-form-control--textarea--Height);
+    vertical-align: bottom;
   }
 
   &.pf-m-resize-vertical {
